--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     <div class="contenedor-principal">
       <div class="contenedor-interno">
         <div class="color">
-          <label for="rojo">Rojo (R)</label>
-          <input id="rojo" type="range" min="0" max="255" value="23" step="1">
-          <p id="texto-rojo"></p>
+          <label for="red">Red (R)</label>
+          <input id="red" type="range" min="0" max="255" value="23" step="1">
+          <p id="texto-red"></p>
         </div>
 
         <div class="color">
-          <label for="verde">Verde (G)</label>
-          <input id="verde" type="range" min="0" max="255" value="41" step="1">
-          <p id="texto-verde"></p>
+          <label for="green">Green (G)</label>
+          <input id="green" type="range" min="0" max="255" value="41" step="1">
+          <p id="texto-green"></p>
         </div>
 
         <div class="color">
-          <label for="azul">Azul (B)</label>
-          <input id="azul" type="range" min="0" max="255" value="56" step="1">
-          <p id="texto-azul"></p>
+          <label for="blue">Blue (B)</label>
+          <input id="blue" type="range" min="0" max="255" value="56" step="1">
+          <p id="texto-blue"></p>
         </div>
       </div>
     </div>
